--- a/回溯/77. 组合.md
+++ b/回溯/77. 组合.md
@@ -1,88 +1,93 @@
-### **77. 组合**
+### **77. 组合 — 笔记**
 
-#### **问题描述**：
+#### 题目解析
 
-给定两个整数 `n` 和 `k`，返回范围 `[1, n]` 中所有可能的 `k` 个数的组合。你可以按任何顺序返回答案。
+给定两个整数 **n** 和 **k**，要求返回从 **1** 到 **n** 中所有可能的 **k** 个数的组合。
+ 例如，当 n = 4, k = 2 时，可能的组合有：
 
-#### **思路**：
+```
+[1, 2], [1, 3], [1, 4], [2, 3], [2, 4], [3, 4]
+```
 
-本题要求返回所有从 `[1, n]` 中选取 `k` 个数的组合，可以使用回溯算法（backtracking）来生成所有可能的组合。
+------
 
-#### **回溯算法概述**：
+#### 解题思路
 
-- **回溯算法**的核心思想是**递归地尝试每个可能的选择，并在发现选择无效时返回（即回溯）**。
-- 对于本题，我们从 `1` 到 `n` 中选择 `k` 个数，每次递归选择一个数，直到选择的数目达到了 `k`，即为一个合法组合。
+本题是一个典型的组合问题，适合用回溯算法来解决。
 
-#### **剪枝**：
+- **回溯算法**：
 
-- 在递归中，如果当前已经选择的元素数和剩余可以选择的元素数加起来小于 `k`，则不再继续递归，因为无法再选择足够的数来组成一个有效的组合。
-- 这种剪枝可以显著减少不必要的递归计算，提高效率。
+  - 通过递归逐步构建组合，在每一步选择一个数字，并继续选择下一个数字，直到组合中有 k 个数。
+  - 使用一个列表 `path` 存储当前构建的组合；当组合长度等于 k 时，把组合的拷贝加入结果列表 `result`。
+  - 回溯过程中，需要撤销上一次的选择（即删除最后一个加入的数字），以尝试其他数字。
 
+- **剪枝优化**：
+
+  - 在 `for` 循环中，可以提前终止，当从当前的起始数字到 n 的剩余数字数量不足以填满 k 个数时，就没有必要再进行递归。
+
+  - 具体剪枝条件为：
+
+    ```
+    i <= n - (k - path.size()) + 1
+    ```
+
+    这确保了在当前已选 `path.size()` 个数字的情况下，剩余的数字足够凑成一个长度为 k 的组合。
+
+------
 **单层搜索的过程**
 
 ![回溯单层搜索过程](image/回溯单层搜索过程.png)
 
-#### **代码解读**：
+#### 代码实现（带中文注释）
 
 ```java
 class Solution {
-    private List<List<Integer>> result = new ArrayList<>(); // 存放所有组合的结果
-    private List<Integer> current = new ArrayList<>(); // 当前正在构建的组合
+    // 全局变量：用于存储当前构建的组合
+    List<Integer> path = new ArrayList<>();
+    // 全局变量：用于存储所有满足条件的组合结果
+    List<List<Integer>> result = new ArrayList<>();
 
     public List<List<Integer>> combine(int n, int k) {
-        backtrack(n, k, 1); // 从1开始选择
+        backtracking(n, k, 1); // 从1开始选数
         return result;
     }
 
-    private void backtrack(int n, int k, int start) {
-        // 剪枝：如果剩下的数字无法满足选择k个数，提前返回
-        if (current.size() + (n - start + 1) < k) {
+    private void backtracking(int n, int k, int startIndex) {
+        // 当当前组合长度达到 k 时，将组合加入结果中
+        if (path.size() == k) {
+            result.add(new ArrayList<>(path));
             return;
         }
-
-        // 如果已经选择了k个数，添加当前组合到结果
-        if (current.size() == k) {
-            result.add(new ArrayList<>(current)); // 创建当前组合的副本
-            return;
-        }
-
-        // 遍历从start到n的数字
-        for (int i = start; i <= n; i++) {
-            current.add(i); // 选择当前数字
-            backtrack(n, k, i + 1); // 递归，选择下一个数字
-            current.remove(current.size() - 1); // 回溯，撤销选择
+        // 剪枝：如果剩余可选的数字数量不足以凑满 k 个，则提前返回
+        // 这里 i 的最大值为 n - (k - path.size()) + 1
+        for (int i = startIndex; i <= n - (k - path.size()) + 1; i++) {
+            path.add(i);                     // 选择当前数字 i 加入组合中
+            backtracking(n, k, i + 1);         // 递归调用，从 i+1 继续选数
+            path.remove(path.size() - 1);      // 回溯，撤销最后一次选择
         }
     }
 }
 ```
 
-#### **关键步骤分析**：
+------
 
-1. **`backtrack(n, k, start)`**：
-   - `n`：范围的上限，表示从 `[1, n]` 中选数。
-   - `k`：选择的数目。
-   - `start`：当前递归的起始数字，确保每次递归时不重复选择已经选过的数字。
-2. **剪枝**：
-   - **`if (current.size() + (n - start + 1) < k)`**：
-      剪枝条件。如果当前组合的大小 `current.size()` 加上从 `start` 到 `n` 的剩余元素数量 `n - start + 1` 小于 `k`，则不可能组成有效的组合，直接返回，避免不必要的递归。
-3. **递归**：
-   - 每次递归，尝试将当前数字 `i` 添加到 `current` 中，然后递归调用，进入下一个数字的选择。
-   - 如果 `current` 的大小达到了 `k`，就将其添加到结果列表 `result` 中。
-   - 递归结束后，通过 `current.remove(current.size() - 1)` 回溯，撤销最后一次选择。
-4. **返回结果**：
-   - 在 `combine` 方法中，返回最终存储所有合法组合的 `result`。
+#### 复杂度分析
 
-#### **时间复杂度**：
+- **时间复杂度**：
+   最坏情况下，生成的组合数为 C(n, k)（组合数），每个组合需要 O(k) 的时间来构造，所以总体时间复杂度为 O(C(n, k) * k)。
+- **空间复杂度**：
+  - 递归调用栈的深度为 O(k)（因为当前组合的最大长度为 k）。
+  - 存储结果需要 O(C(n, k) * k) 的空间，除此之外额外使用的空间较小。
 
-- 最坏情况下，我们需要生成所有的 `C(n, k)` 种组合，其中 `C(n, k)` 为从 `n` 个数中选 `k` 个数的组合数。
-- 因此，时间复杂度为 O(C(n, k))。
+------
 
-#### **空间复杂度**：
+#### 总结
 
-- 由于需要存储所有的组合结果，空间复杂度也是 O(C(n, k))。
-
-#### **总结**：
-
-1. 使用回溯算法来递归地生成所有可能的组合。
-2. 在递归过程中，通过剪枝提前终止不可能的分支，提高了效率。
-3. 时间复杂度和空间复杂度均与组合的数量 `C(n, k)` 成正比。
+1. **核心思路**：
+   - 使用回溯算法从数字 1 开始逐步构建组合。
+   - 利用剪枝条件，减少不必要的递归调用，提高算法效率。
+2. **关键步骤**：
+   - 当组合长度达到 k 时，将当前组合（副本）加入结果列表。
+   - 在每次递归返回时，通过回溯撤销上一次选择，确保路径正确。
+3. **优化策略**：
+   - 使用剪枝条件 `i <= n - (k - path.size()) + 1`，确保在剩余数字不足时提前结束当前递归分支，从而减少计算量。
